--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -257,7 +257,7 @@
                 url: `data:image/svg+xml;charset=UTF-8,${encodeURIComponent(`
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                         <rect width="32" height="32" fill="${color}" />
-                        <text x="16" y="20" font-family="Arial" font-size="12" fill="black" text-anchor="middle">${orderId}</text>
+                        <text x="16" y="20" font-family="Arial" font-size="12" fill="white" text-anchor="middle">${orderId}</text>
                     </svg>
                 `)}`,
                 scaledSize: new google.maps.Size(32, 32),
@@ -279,37 +279,23 @@
                 const tracking = response.data;
                 if (tracking.courierLocationCoordinates) {
                     const { lat, lng } = tracking.courierLocationCoordinates;
-                    let courierMarker = markers[`courier-${order.uid}`];
-                    let labelMarker = markers[`courier-label-${order.uid}`];
+                    let courierMarker = markers[`courier-${order.courier.courierName}`];
 
                     if (!courierMarker) {
                         courierMarker = new google.maps.Marker({
                             position: { lat, lng },
                             map: map,
                             title: `Motoboy - ${order.courier.courierName}`,
-                            icon: {
-                                url: 'https://i.ibb.co/g9ssC3D/capacete.png',
-                                scaledSize: new google.maps.Size(16, 16),
-                                anchor: new google.maps.Point(8, 8)
-                            }
+                            icon: getCourierIcon(order.courier.courierName, order.status)
                         });
-                        markers[`courier-${order.uid}`] = courierMarker;
-
-                        labelMarker = new google.maps.Marker({
-                            position: { lat, lng: lng + 0.0003 },
-                            map: map,
-                            icon: getCourierLabelIcon(order.courier.courierName, order.status),
-                            clickable: false
-                        });
-                        markers[`courier-label-${order.uid}`] = labelMarker;
+                        markers[`courier-${order.courier.courierName}`] = courierMarker;
 
                         courierMarker.addListener('click', () => {
                             showCourierDetails(order, tracking);
                         });
                     } else {
                         courierMarker.setPosition({ lat, lng });
-                        labelMarker.setPosition({ lat, lng: lng + 0.0003 });
-                        labelMarker.setIcon(getCourierLabelIcon(order.courier.courierName, order.status));
+                        courierMarker.setIcon(getCourierIcon(order.courier.courierName, order.status));
                     }
                 }
             } catch (error) {
@@ -317,17 +303,17 @@
             }
         }
 
-function getCourierLabelIcon(courierName, status) {
+        function getCourierIcon(courierName, status) {
             return {
                 url: `data:image/svg+xml;charset=UTF-8,${encodeURIComponent(`
-                    <svg xmlns="http://www.w3.org/2000/svg" width="60" height="40">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60">
                         <rect width="60" height="20" rx="10" ry="10" fill="${status === 'onGoing' ? 'red' : 'green'}" />
                         <text x="30" y="14" font-family="Arial" font-size="12" fill="white" text-anchor="middle">${courierName.substring(0, 5).toUpperCase()}</text>
-                        <image href="https://i.ibb.co/g9ssC3D/capacete.png" x="22" y="20" height="20" width="20"/>
+                        <image href="http://maps.google.com/mapfiles/ms/icons/motorcycling.png" x="15" y="20" height="40" width="40"/>
                     </svg>
                 `)}`,
-                scaledSize: new google.maps.Size(60, 40),
-                anchor: new google.maps.Point(30, 20)
+                scaledSize: new google.maps.Size(60, 60),
+                anchor: new google.maps.Point(30, 30)
             };
         }
 
@@ -348,7 +334,7 @@ function getCourierLabelIcon(courierName, status) {
             }
         }
 
-        function translatePaymentMethod(method) {
+   function translatePaymentMethod(method) {
             switch(method) {
                 case 'credit_card': return 'Cartão de Crédito';
                 case 'debit_card': return 'Cartão de Débito';
@@ -393,7 +379,7 @@ function getCourierLabelIcon(courierName, status) {
                 `
             });
 
-            const marker = markers[`courier-${order.uid}`];
+            const marker = markers[`courier-${order.courier.courierName}`];
             if (marker) {
                 infoWindow.open(map, marker);
             }
