--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -325,16 +325,348 @@
             }
         }
 
-        function getStatusDisplay(status) {
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gerenciar Pedidos - Foody Delivery</title>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-pF2lRStLTN9Xw9aYQj962qdNFyUXI2E"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
+    <style>
+        body { 
+            font-family: 'Roboto', sans-serif;
+            margin: 0; 
+            padding: 0; 
+            background-color: #f0f0f0; 
+            color: #333;
+        }
+        .container { 
+            display: flex; 
+            height: 100vh; 
+        }
+        .sidebar { 
+            width: 350px; 
+            background-color: #2c3e50; 
+            padding: 20px; 
+            overflow-y: auto; 
+            box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+        }
+        .main-content { 
+            flex-grow: 1; 
+            display: flex; 
+            flex-direction: column; 
+        }
+        #map { 
+            flex-grow: 1; 
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        .order-list { 
+            max-height: calc(100vh - 100px); 
+            overflow-y: auto; 
+        }
+        .order-item { 
+            background-color: #fff; 
+            margin-bottom: 10px; 
+            padding: 15px; 
+            border-radius: 8px; 
+            position: relative;
+            transition: all 0.3s ease;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        .order-item:hover { 
+            transform: translateY(-3px);
+            box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+        }
+        .filter-section { 
+            margin-bottom: 20px; 
+        }
+        h2 {
+            color: #ecf0f1;
+            margin-bottom: 20px;
+            font-size: 24px;
+            text-align: center;
+        }
+        .order-options { 
+            position: absolute; 
+            right: 10px; 
+            top: 10px; 
+        }
+        .order-options i { 
+            cursor: pointer; 
+            margin-left: 5px;
+            color: #3498db;
+            transition: color 0.3s ease;
+        }
+        .order-options i:hover {
+            color: #2980b9;
+        }
+        .error { 
+            color: #e74c3c; 
+            font-weight: bold; 
+            background-color: #fadbd8;
+            padding: 10px;
+            border-radius: 5px;
+            margin-top: 10px;
+        }
+        /* Estilos para os status dos pedidos */
+        .status-accepted { color: #f39c12; }
+        .status-onGoing { color: #2ecc71; }
+        .status-ready { color: #9b59b6; }
+        .status-dispatched { color: #e67e22; }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="sidebar">
+            <h2>Pedidos</h2>
+            <div class="filter-section">
+                <div id="orderList" class="order-list"></div>
+            </div>
+        </div>
+        <div class="main-content">
+            <div id="map"></div>
+        </div>
+    </div>
+
+    <script>
+        // Configuração do Firebase
+        const firebaseConfig = {
+            apiKey: "AIzaSyB-pF2lRStLTN9Xw9aYQj962qdNFyUXI2E",
+            authDomain: "cabana-8d55e.firebaseapp.com",
+            databaseURL: "https://cabana-8d55e-default-rtdb.firebaseio.com",
+            projectId: "cabana-8d55e",
+            storageBucket: "cabana-8d55e.appspot.com",
+            messagingSenderId: "706144237954",
+            appId: "1:706144237954:web:345c10370972486afc779b",
+            measurementId: "G-96Y337GYT8"
+        };
+        firebase.initializeApp(firebaseConfig);
+
+        const db = firebase.firestore();
+        let map;
+        let markers = {};
+        const firebaseFunctionUrl = 'https://us-central1-cabana-8d55e.cloudfunctions.net/getFoodyOrders/proxy';
+        const trackingUrl = 'https://us-central1-cabana-8d55e.cloudfunctions.net/getFoodyTracking/tracking';
+        const authToken = '8d7c77946d534444a168bb7da794febf';
+        const foodyApiUrl = 'https://app.foodydelivery.com/rest/1.2/orders/';
+
+        function initMap() {
+            const centerAddress = { lat: -5.750636, lng: -35.254625 };
+            map = new google.maps.Map(document.getElementById('map'), {
+                center: centerAddress,
+                zoom: 16,
+                styles: [
+                    // ... (estilos do mapa permanecem os mesmos)
+                ]
+            });
+
+            new google.maps.Marker({
+                position: centerAddress,
+                map: map,
+                title: "Rua Serra do Mar, 1216, Potengi",
+                icon: {
+                    url: "https://maps.google.com/mapfiles/ms/icons/blue-dot.png",
+                    scaledSize: new google.maps.Size(40, 40)
+                }
+            });
+        }
+
+        function formatDate(date) {
+            return date.toISOString().replace(/\.\d{3}Z$/, '-03:00');
+        }
+
+        async function fetchOrders() {
+            try {
+                const now = new Date();
+                const startDate = formatDate(new Date(now.getTime() - 24 * 60 * 60 * 1000)); // 24 horas atrás
+                const endDate = formatDate(now);
+                
+                const response = await axios.get(firebaseFunctionUrl, {
+                    headers: {
+                        'Authorization': authToken,
+                        'Content-Type': 'application/json;charset=UTF-8'
+                    },
+                    params: {
+                        url: `${foodyApiUrl}?startDate=${encodeURIComponent(startDate)}&endDate=${encodeURIComponent(endDate)}`
+                    }
+                });
+                console.log('Pedidos recebidos:', response.data);
+                const filteredOrders = response.data.filter(order => 
+                    ['onGoing', 'ready', 'accepted', 'dispatched'].includes(order.status)
+                );
+                updateOrderList(filteredOrders);
+                updateMap(filteredOrders);
+            } catch (error) {
+                console.error('Erro ao buscar pedidos:', error);
+                document.getElementById('orderList').innerHTML = '<p class="error">Erro ao carregar pedidos. Por favor, tente novamente mais tarde.</p>';
+            }
+        }
+
+        function updateOrderList(orders) {
+            const orderList = document.getElementById('orderList');
+            orderList.innerHTML = '';
+            orders.forEach(order => {
+                const orderDiv = document.createElement('div');
+                orderDiv.className = 'order-item';
+                orderDiv.innerHTML = `
+                    <h3>Pedido #${order.id}</h3>
+                    <p class="status-${order.status.toLowerCase()}">${getStatusDisplay(order.status)}</p>
+                    <p>Cliente: ${order.customer.customerName}</p>
+                    ${order.courier ? `<p>Motoboy: ${order.courier.courierName}</p>` : ''}
+                    <p>Método de Pagamento: ${translatePaymentMethod(order.paymentMethod)}</p>
+                    <p>Total do Pedido: R$ ${order.orderTotal ? order.orderTotal.toFixed(2) : 'N/A'}</p>
+                    ${order.notes ? `<p>Observações: ${order.notes}</p>` : ''}
+                    <div class="order-options">
+                        <i class="fas fa-map-marker-alt" onclick="centerOrderOnMap('${order.uid}')"></i>
+                    </div>
+                `;
+                orderList.appendChild(orderDiv);
+            });
+        }
+
+        function updateMap(orders) {
+            // Remover marcadores de pedidos que não estão mais na lista
+            Object.keys(markers).forEach(key => {
+                if (key.startsWith('order-') && !orders.find(order => `order-${order.uid}` === key)) {
+                    markers[key].setMap(null);
+                    delete markers[key];
+                }
+            });
+
+            orders.forEach(order => {
+                if (order.deliveryPoint && order.deliveryPoint.coordinates) {
+                    const { lat, lng } = order.deliveryPoint.coordinates;
+                    let marker = markers[`order-${order.uid}`];
+                    
+                    if (!marker) {
+                        marker = new google.maps.Marker({
+                            position: { lat, lng },
+                            map: map,
+                            title: `Pedido #${order.id}`,
+                            icon: getOrderMarkerIcon(order.status, order.id)
+                        });
+                        markers[`order-${order.uid}`] = marker;
+
+                        marker.addListener('click', () => {
+                            showOrderDetails(order);
+                        });
+                    } else {
+                        marker.setIcon(getOrderMarkerIcon(order.status, order.id));
+                    }
+                }
+
+                if (order.status === 'onGoing' || order.status === 'dispatched') {
+                    updateCourierLocation(order);
+                }
+            });
+        }
+
+        function getOrderMarkerIcon(status, orderId) {
+            let color;
+            switch (status) {
+                case 'ready':
+                    color = 'purple';
+                    break;
+                case 'onGoing':
+                    color = 'lightblue';
+                    break;
+                case 'accepted':
+                    color = 'yellow';
+                    break;
+                case 'dispatched':
+                    color = 'orange';
+                    break;
+                default:
+                    color = 'gray';
+            }
+            return {
+                url: `data:image/svg+xml;charset=UTF-8,${encodeURIComponent(`
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                        <rect width="32" height="32" fill="${color}" stroke="black" stroke-width="1" />
+                        <text x="16" y="20" font-family="Arial" font-size="12" fill="black" text-anchor="middle">${orderId}</text>
+                    </svg>
+                `)}`,
+                scaledSize: new google.maps.Size(32, 32),
+                anchor: new google.maps.Point(16, 16)
+            };
+        }
+
+        async function updateCourierLocation(order) {
+            try {
+                const response = await axios.get(trackingUrl, {
+                    headers: {
+                        'Authorization': authToken,
+                        'Content-Type': 'application/json;charset=UTF-8'
+                    },
+                    params: {
+                        orderUid: order.uid
+                    }
+                });
+                const tracking = response.data;
+                if (tracking.courierLocationCoordinates) {
+                    const { lat, lng } = tracking.courierLocationCoordinates;
+                    let courierMarker = markers[`courier-${order.courier.courierName}`];
+
+                    if (!courierMarker) {
+                        courierMarker = new google.maps.Marker({
+                            position: { lat, lng },
+                            map: map,
+                            title: `Motoboy - ${order.courier.courierName}`,
+                            icon: getCourierIcon(order.courier.courierName, order.status)
+                        });
+                        markers[`courier-${order.courier.courierName}`] = courierMarker;
+
+                        courierMarker.addListener('click', () => {
+                            showCourierDetails(order, tracking);
+                        });
+                    } else {
+                        courierMarker.setPosition({ lat, lng });
+                        courierMarker.setIcon(getCourierIcon(order.courier.courierName, order.status));
+                    }
+                }
+            } catch (error) {
+                console.error(`Erro ao buscar localização do motoboy para o pedido ${order.uid}:`, error);
+            }
+        }
+
+        function getCourierIcon(courierName, status) {
+            return {
+                url: `data:image/svg+xml;charset=UTF-8,${encodeURIComponent(`
+                    <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60">
+                        <rect width="60" height="20" rx="10" ry="10" fill="${status === 'onGoing' ? 'red' : 'green'}" />
+                        <text x="30" y="14" font-family="Arial" font-size="12" fill="white" text-anchor="middle">${courierName.substring(0, 5).toUpperCase()}</text>
+                        <image href="http://maps.google.com/mapfiles/ms/icons/motorcycling.png" x="10" y="20" height="40" width="40"/>
+                    </svg>
+                `)}`,
+                scaledSize: new google.maps.Size(60, 60),
+                anchor: new google.maps.Point(30, 30)
+            };
+        }
+
+        function centerOrderOnMap(orderUid) {
+            const marker = markers[`order-${orderUid}`] || markers[`courier-${orderUid}`];
+            if (marker) {
+                map.setCenter(marker.getPosition());
+                map.setZoom(16);
+            }
+        }
+
+function getStatusDisplay(status) {
             switch(status) {
                 case 'accepted': return 'Aceito';
                 case 'onGoing': return 'A Caminho';
                 case 'ready': return 'Pronto';
+                case 'dispatched': return 'Despachado';
                 default: return status;
             }
         }
 
-function translatePaymentMethod(method) {
+        function translatePaymentMethod(method) {
             switch(method) {
                 case 'credit_card': return 'Cartão de Crédito';
                 case 'debit_card': return 'Cartão de Débito';
