--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -88,7 +88,7 @@
         }
         /* Estilos para os status dos pedidos */
         .status-accepted { color: #f1c40f; }
-        .status-onGoing { color: #40E0D0; }
+        .status-onGoing { color: #87CEEB; }
         .status-ready { color: #8E44AD; }
         .status-dispatched { color: #e67e22; }
     </style>
