--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -246,7 +246,7 @@
                     color = '#8E44AD';  // Roxo
                     break;
                 case 'onGoing':
-                    color = '#40E0D0';  // Azul piscina
+                    color = '#87CEEB';  // Azul piscina
                     break;
                 case 'accepted':
                     color = '#f1c40f';  // Amarelo
